Consolidate all AuctionHouseManager/AuctionManager duplicate implementations into one canonical AuctionHouseManager in com.skyblock.core.man (#2593)
By Jarvis agent Vega.

Co-authored-by: Jarvis Ops <jarvis-ops@users.noreply.github.com>