@@ -1,10 +1,11 @@
 package com.skyblock.plugin.commands;
 
-import com.skyblock.plugin.managers.AuctionHouseManager;
+import com.skyblock.core.manager.AuctionHouseManager;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemStack;
 
 import java.util.Arrays;
 import java.util.List;
@@ -12,6 +13,10 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 public final class AuctionHouseCommand implements CommandExecutor {
+
+    private static AuctionHouseManager manager() {
+        return AuctionHouseManager.getInstance();
+    }
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
@@ -26,12 +31,12 @@ public final class AuctionHouseCommand implements CommandExecutor {
         }
 
         switch (args[0].toLowerCase()) {
-            case "list"   -> handleList(player);
-            case "create" -> handleCreate(player, args);
-            case "bid"    -> handleBid(player, args);
-            case "cancel" -> handleCancel(player, args);
-            case "search" -> handleSearch(player, args);
-            case "my"      -> handleMy(player);
+            case "list"    -> handleList(player);
+            case "create"  -> handleCreate(player, args);
+            case "bid"     -> handleBid(player, args);
+            case "cancel"  -> handleCancel(player, args);
+            case "search"  -> handleSearch(player, args);
+            case "mine"    -> handleMine(player);
             case "history" -> handleHistory(player);
             default        -> sendHelp(player);
         }
@@ -39,26 +44,31 @@ public final class AuctionHouseCommand implements CommandExecutor {
     }
 
     private void handleList(Player player) {
-        List<AuctionHouseManager.AuctionListing> top = AuctionHouseManager.getInstance().getAllListings().stream()
-                .sorted((a, b) -> Double.compare(b.currentBid(), a.currentBid()))
+        List<AuctionHouseManager.AuctionListing> top = manager().getActiveListings().stream()
+                .map(manager()::getListing)
+                .sorted((a, b) -> Double.compare(b.startingBid(), a.startingBid()))
                 .limit(5)
-                .toList();
+                .collect(Collectors.toList());
         if (top.isEmpty()) {
             player.sendMessage("The auction house has no active listings.");
             return;
         }
         player.sendMessage("=== Auction House (Top 5) ===");
-        for (AuctionHouseManager.AuctionListing item : top) {
-            player.sendMessage("[" + item.id().toString().substring(0, 8) + "] "
-                    + item.itemName() + " x" + item.quantity()
-                    + " — Starting: " + item.startingBid()
-                    + " | Current: " + item.currentBid() + " coins");
+        for (AuctionHouseManager.AuctionListing listing : top) {
+            player.sendMessage("[" + listing.id().toString().substring(0, 8) + "] "
+                    + listing.itemName() + " [" + listing.category().getDisplayName() + "]"
+                    + " — " + listing.startingBid() + " coins (" + listing.type().name() + ")");
         }
     }
 
     private void handleCreate(Player player, String[] args) {
         if (args.length < 3) {
-            player.sendMessage("Usage: /auctionhouse create <startingBid> <itemName>");
+            player.sendMessage("Usage: /auctionhouse create <startingBid> <category> [bin]");
+            return;
+        }
+        ItemStack held = player.getInventory().getItemInMainHand();
+        if (held.getType().isAir()) {
+            player.sendMessage("You must hold an item to list it.");
             return;
         }
         double startingBid;
@@ -72,12 +82,21 @@ public final class AuctionHouseCommand implements CommandExecutor {
             player.sendMessage("Starting bid must not be negative.");
             return;
         }
-        String itemName = String.join(" ", Arrays.copyOfRange(args, 2, args.length));
-        long endTime = System.currentTimeMillis() + 7L * 24 * 60 * 60 * 1000;
-        UUID listingId = UUID.randomUUID();
-        AuctionHouseManager.AuctionListing listing = new AuctionHouseManager.AuctionListing(
-                listingId, player.getUniqueId(), itemName, 1, startingBid, startingBid, null, endTime);
-        AuctionHouseManager.getInstance().addListing(player.getUniqueId(), listing);
+        AuctionHouseManager.AuctionCategory category;
+        try {
+            category = AuctionHouseManager.AuctionCategory.valueOf(args[2].toUpperCase());
+        } catch (IllegalArgumentException e) {
+            player.sendMessage("Unknown category: " + args[2]);
+            return;
+        }
+        AuctionHouseManager.AuctionType type = (args.length >= 4 && args[3].equalsIgnoreCase("bin"))
+                ? AuctionHouseManager.AuctionType.BIN
+                : AuctionHouseManager.AuctionType.AUCTION;
+        String itemName = held.hasItemMeta() && held.getItemMeta().hasDisplayName()
+                ? held.getItemMeta().getDisplayName()
+                : held.getType().name();
+        UUID listingId = manager().createListing(player.getUniqueId(), held.clone(), itemName,
+                category, startingBid, type);
         player.sendMessage(String.format("Listed '%s' starting at %.1f coins. ID: %s",
                 itemName, startingBid, listingId.toString().substring(0, 8)));
     }
@@ -87,8 +106,8 @@ public final class AuctionHouseCommand implements CommandExecutor {
             player.sendMessage("Usage: /auctionhouse bid <id> <amount>");
             return;
         }
-        AuctionHouseManager.AuctionListing listing = findListing(player, args[1]);
-        if (listing == null) return;
+        UUID listingId = resolveId(player, args[1]);
+        if (listingId == null) return;
         double amount;
         try {
             amount = Double.parseDouble(args[2]);
@@ -96,16 +115,16 @@ public final class AuctionHouseCommand implements CommandExecutor {
             player.sendMessage("Invalid amount: " + args[2]);
             return;
         }
-        if (listing.seller().equals(player.getUniqueId())) {
-            player.sendMessage("You cannot bid on your own listing.");
-            return;
+        try {
+            boolean purchased = manager().placeBid(listingId, player.getUniqueId(), amount);
+            if (purchased) {
+                player.sendMessage("You purchased the item for " + amount + " coins!");
+            } else {
+                player.sendMessage("Your bid of " + amount + " coins has been placed.");
+            }
+        } catch (IllegalArgumentException e) {
+            player.sendMessage("Could not place bid: " + e.getMessage());
         }
-        if (amount <= listing.currentBid()) {
-            player.sendMessage("Bid must exceed current bid of " + listing.currentBid() + " coins.");
-            return;
-        }
-        AuctionHouseManager.getInstance().placeBid(listing.seller(), listing.id(), player.getUniqueId(), amount);
-        player.sendMessage(String.format("Bid of %.1f coins placed on '%s'.", amount, listing.itemName()));
     }
 
     private void handleCancel(Player player, String[] args) {
@@ -113,13 +132,13 @@ public final class AuctionHouseCommand implements CommandExecutor {
             player.sendMessage("Usage: /auctionhouse cancel <id>");
             return;
         }
-        UUID id = parseId(player, args[1]);
-        if (id == null) return;
-        boolean removed = AuctionHouseManager.getInstance().removeListing(player.getUniqueId(), id);
-        if (removed) {
+        UUID listingId = resolveId(player, args[1]);
+        if (listingId == null) return;
+        try {
+            manager().cancelListing(listingId, player.getUniqueId());
             player.sendMessage("Listing cancelled.");
-        } else {
-            player.sendMessage("No active listing with that ID found under your account.");
+        } catch (IllegalArgumentException e) {
+            player.sendMessage("Could not cancel: " + e.getMessage());
         }
     }
 
@@ -129,8 +148,9 @@ public final class AuctionHouseCommand implements CommandExecutor {
             return;
         }
         String query = String.join(" ", Arrays.copyOfRange(args, 1, args.length)).toLowerCase();
-        List<AuctionHouseManager.AuctionListing> results = AuctionHouseManager.getInstance().getAllListings().stream()
-                .filter(item -> item.itemName().toLowerCase().contains(query))
+        List<AuctionHouseManager.AuctionListing> results = manager().getActiveListings().stream()
+                .map(manager()::getListing)
+                .filter(l -> l.itemName().toLowerCase().contains(query))
                 .sorted((a, b) -> a.itemName().compareToIgnoreCase(b.itemName()))
                 .collect(Collectors.toList());
         if (results.isEmpty()) {
@@ -138,30 +158,30 @@ public final class AuctionHouseCommand implements CommandExecutor {
             return;
         }
         player.sendMessage("=== Search: '" + query + "' (" + results.size() + ") ===");
-        for (AuctionHouseManager.AuctionListing item : results) {
-            player.sendMessage("[" + item.id().toString().substring(0, 8) + "] "
-                    + item.itemName() + " — " + item.currentBid() + " coins");
+        for (AuctionHouseManager.AuctionListing l : results) {
+            player.sendMessage("[" + l.id().toString().substring(0, 8) + "] "
+                    + l.itemName() + " — " + l.startingBid() + " coins");
         }
     }
 
-    private void handleMy(Player player) {
-        List<AuctionHouseManager.AuctionListing> mine = AuctionHouseManager.getInstance()
-                .getListings(player.getUniqueId());
+    private void handleMine(Player player) {
+        List<AuctionHouseManager.AuctionListing> mine = manager().getActiveListings().stream()
+                .map(manager()::getListing)
+                .filter(l -> player.getUniqueId().equals(l.seller()))
+                .collect(Collectors.toList());
         if (mine.isEmpty()) {
             player.sendMessage("You have no active auction listings.");
             return;
         }
         player.sendMessage("=== Your Listings (" + mine.size() + ") ===");
-        for (AuctionHouseManager.AuctionListing item : mine) {
-            player.sendMessage("[" + item.id().toString().substring(0, 8) + "] "
-                    + item.itemName() + " x" + item.quantity()
-                    + " — Starting: " + item.startingBid()
-                    + " | Current: " + item.currentBid() + " coins");
+        for (AuctionHouseManager.AuctionListing l : mine) {
+            player.sendMessage("[" + l.id().toString().substring(0, 8) + "] "
+                    + l.itemName() + " — " + l.startingBid() + " coins (" + l.type().name() + ")");
         }
     }
 
     private void handleHistory(Player player) {
-        List<String> history = AuctionHouseManager.getInstance().getAuctionHistory(player.getUniqueId());
+        List<String> history = manager().getAuctionHistory(player.getUniqueId());
         player.sendMessage("=== Auction History ===");
         if (history.isEmpty()) {
             player.sendMessage("You have no auction history.");
@@ -172,24 +192,9 @@ public final class AuctionHouseCommand implements CommandExecutor {
         }
     }
 
-    private AuctionHouseManager.AuctionListing findListing(Player player, String input) {
-        UUID id = parseId(player, input);
-        if (id == null) return null;
-        for (AuctionHouseManager.AuctionListing listing : AuctionHouseManager.getInstance().getAllListings()) {
-            if (listing.id().equals(id)) return listing;
-        }
-        player.sendMessage("No active listing matches id: " + input);
-        return null;
-    }
-
-    private UUID parseId(Player player, String input) {
-        try {
-            return UUID.fromString(input);
-        } catch (IllegalArgumentException ignored) {
-        }
-        // support short 8-char prefix lookup
-        for (AuctionHouseManager.AuctionListing listing : AuctionHouseManager.getInstance().getAllListings()) {
-            if (listing.id().toString().startsWith(input)) return listing.id();
+    private UUID resolveId(Player player, String input) {
+        for (UUID id : manager().getActiveListings()) {
+            if (id.toString().startsWith(input) || id.toString().equals(input)) return id;
         }
         player.sendMessage("No active listing matches id: " + input);
         return null;
@@ -197,12 +202,12 @@ public final class AuctionHouseCommand implements CommandExecutor {
 
     private void sendHelp(Player player) {
         player.sendMessage("=== Auction House Commands ===");
-        player.sendMessage("/auctionhouse list                     — show all active listings");
-        player.sendMessage("/auctionhouse create <bid> <name>      — create a listing");
-        player.sendMessage("/auctionhouse bid <id> <amount>        — place a bid on a listing");
-        player.sendMessage("/auctionhouse cancel <id>              — cancel your listing");
-        player.sendMessage("/auctionhouse search <query>           — search listings by name");
-        player.sendMessage("/auctionhouse my                       — show your active listings");
-        player.sendMessage("/auctionhouse history                  — show your auction history");
+        player.sendMessage("/auctionhouse list                         — show active listings");
+        player.sendMessage("/auctionhouse create <bid> <category> [bin] — create a listing");
+        player.sendMessage("/auctionhouse bid <id> <amount>            — place a bid");
+        player.sendMessage("/auctionhouse cancel <id>                  — cancel your listing");
+        player.sendMessage("/auctionhouse search <query>               — search listings");
+        player.sendMessage("/auctionhouse mine                         — your active listings");
+        player.sendMessage("/auctionhouse history                      — your auction history");
     }
 }
